# dtrx

./: .pre-commit-config.yaml  Dockerfile  README-man.md  pyproject.toml  test.sh  tox.ini
.github/workflows/: main.yml
dtrx/: dtrx.py
scripts/: dtrx
tests/: tests.yml
tools/: gen-manpage.sh  jar_duplicate_entries.py
