[tool.poetry]
name = "dtrx"
version = "8.2.1"
description = "Script to intelligently extract multiple archive types"
authors = ["Brett Smith <brettcsmith@brettcsmith.org>"]
homepage = "http://www.brettcsmith.org/2007/dtrx/"
repository = "https://github.com/dtrx-py/dtrx"
license = "GNU General Public License, version 3 or later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
dtrx = "dtrx:dtrx.main"

[tool.poetry.dependencies]
python = ">=2.7,<3.10"
subprocess32 = { version = "^3", python = "~2.7" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
